adopt layout for createVectorLayer

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -454,7 +454,7 @@
                 "privacy": "Datenschutz",
                 "help": "Hilfe",
                 "privacyUrl": "http://www.bfs.de/DE/service/datenschutz/datenschutz_node.html",
-                "createvectorlayer": "Vectorlayer erzeugen"
+                "createvectorlayer": "Vektorlayer erzeugen"
             }
         }
     },
