rename title for chart printing

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -172,7 +172,7 @@
                 "quoteText": "Anführungszeichen (\" \") verwenden",
                 "okText": "Ok",
                 "cancelText": "Abbrechen",
-                "magnification": "Vergrößerung",
+                "magnification": "Auflösung",
                 "original": "Original",
                 "twofold": "2-fach",
                 "threefold": "3-fach",
