--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -171,7 +171,7 @@
                 "quoteText": "use double quotes (\" \")",
                 "okText": "Ok",
                 "cancelText": "Cancel",
-                "magnification": "Magnification",
+                "magnification": "Resolution",
                 "original": "Original",
                 "twofold": "2-fold",
                 "threefold": "3-fold",
