--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -504,7 +504,8 @@
                 "wfstLockSuccess": "Die WFS-T Lock Anfrage war erfolgreich. Der Lock läuft in {0} Minute(n) ab",
                 "wfstLockExpired": "Der WFS-T Lock ist abgelaufen",
                 "wfstLockButton": "WFS-T Lock",
-                "layerNotSavedYet": "Der Layer wurde noch nicht gespeichert"
+                "layerNotSavedYet": "Der Layer wurde noch nicht gespeichert",
+                "multiEditTooltip": "Alle selektierten Zeilen ändern"
             }
         }
     },
