--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -503,7 +503,8 @@
                 "wfstLockSuccess": "The WFS-T Lock request was successful. The lock will timeout in {0} minute(s)",
                 "wfstLockExpired": "The WFS-T Lock has expired",
                 "wfstLockButton": "WFS-T Lock",
-                "layerNotSavedYet": "The layer has not been saved yet"
+                "layerNotSavedYet": "The layer has not been saved yet",
+                "multiEditTooltip": "Update all selected rows"
             }
         }
     },
