--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -504,7 +504,8 @@
                 "wfstLockExpired": "The WFS-T Lock has expired",
                 "wfstLockButton": "WFS-T Lock",
                 "layerNotSavedYet": "The layer has not been saved yet",
-                "multiEditTooltip": "Update all selected rows"
+                "multiEditTooltip": "Update all selected rows",
+                "toggleSortSelectedText": "Selected to top"
             }
         }
     },
