clone the geoserver style when cloning layers

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -655,7 +655,8 @@
                 "okButtonLabel": "Ok",
                 "cancelButtonLabel": "Abbrechen",
                 "emptyTemplateMessage": "Bitte wählen Sie eine Vorlage aus.",
-                "selectionEnabled": "(Selektionswerkzeug ist aktiviert!)"
+                "selectionEnabled": "(Selektionswerkzeug ist aktiviert!)",
+                "copyStyleLabel": "Stil kopieren"
             }
         }
     },
