renames the imported layer group

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -580,7 +580,7 @@
                 "btnTextResetThemeTreeFiltering": "Alle Layer",
                 "btnTooltipResetThemeTreeFiltering": "Hebt eine etwaige Filterung der verfügbaren Themen auf.",
                 "rodosWindowTitle": "RODOS Prognosen Filter",
-                "importedLayersTitle": "Importierte Layer"
+                "importedLayersTitle": "Nutzergeneriert"
             }
         }
     },
