--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -579,7 +579,7 @@
                 "btnTextResetThemeTreeFiltering": "All Layers",
                 "btnTooltipResetThemeTreeFiltering": "Resets filtering of available topics.",
                 "rodosWindowTitle": "en:RODOS Prognosen Filter",
-                "importedLayersTitle": "Imported layers"
+                "importedLayersTitle": "User generated"
             }
         }
     },
