adds new settings entries to menu tree

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -469,7 +469,9 @@
                 "privacy": "Datenschutz",
                 "help": "Hilfe",
                 "privacyUrl": "http://www.bfs.de/DE/service/datenschutz/datenschutz_node.html",
-                "createvectorlayer": "Vektorlayer erzeugen"
+                "createvectorlayer": "Vektorlayer erzeugen",
+                "showHelpText": "Hilfe anzeigen",
+                "showLayersetChooserText": "Themenauswahl anzeigen"
             }
         }
     },
