--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -470,7 +470,8 @@
                 "privacyUrl": "http://www.bfs.de/EN/service/privacy-policy/privacypolicy_node.html",
                 "createvectorlayer": "Create vector layer",
                 "showHelpText": "Hilfe anzeigen",
-                "showLayersetChooserText": "Themenauswahl anzeigen"
+                "showLayersetChooserText": "Themenauswahl anzeigen",
+                "onRestartText": "On reload"
             }
         }
     },
