--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -470,7 +470,7 @@
                 "help": "Hilfe",
                 "privacyUrl": "http://www.bfs.de/DE/service/datenschutz/datenschutz_node.html",
                 "createvectorlayer": "Vektorlayer erzeugen",
-                "showHelpText": "Begrüßungsfenster anzeihen",
+                "showHelpText": "Begrüßungsfenster anzeigen",
                 "showLayersetChooserText": "Layerprofilfenster anzeigen",
                 "onRestartText": "Bei Neustart"
             }
