adjustments for new dokpool schema

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1546,6 +1546,7 @@
             "data": {
                 "DokpoolBehaviour_label": "Dokpool Verhalten",
                 "DokpoolMeta_label": "Dokpool Metadaten",
+                "Doksys_label": "Doksys Metadaten",
                 "Identification_label": "allg. Informationen",
                 "ElanScenarios_label": "Elan Ereignisse",
                 "DokpoolBehaviour_Elan_label": "Elan",
