Allows loading of configured styleReference from within the GeoStyler

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -212,7 +212,11 @@
                 "btnTextImport": "Importieren",
                 "btnTextExport": "Exportieren",
                 "btnTextReloadCurrentStyle": "Auf original Style zurücksetzen",
-                "btnTextApplyAndSave": "Style übernehmen"
+                "btnTextApplyAndSave": "Style übernehmen",
+                "chooseFromVectorTemplate": "Style aus Liste",
+                "templateStyleLabel": "Style",
+                "okButtonLabel": "Ok",
+                "cancelButtonLabel": "Abbrechen"
             }
         }
     },
