--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -211,7 +211,11 @@
                 "btnTextImport": "Import",
                 "btnTextExport": "Export",
                 "btnTextReloadCurrentStyle": "Reset to original style",
-                "btnTextApplyAndSave": "Apply style"
+                "btnTextApplyAndSave": "Apply style",
+                "chooseFromVectorTemplate": "Style from list",
+                "templateStyleLabel": "Style",
+                "okButtonLabel": "Ok",
+                "cancelButtonLabel": "Cancel"
             }
         }
     },
