Adds style combo to add vector data window

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -338,7 +338,8 @@
                 "templateLabel": "Metadaten-Template",
                 "projectionLabel": "Projektion",
                 "fileFieldLabel": "Datei",
-                "fileFieldButtonText": "Durchsuchen"
+                "fileFieldButtonText": "Durchsuchen",
+                "templateStyleLabel": "Stil aus Template"
             }
         }
     },
