--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -337,7 +337,8 @@
                 "templateLabel": "Metadata template",
                 "projectionLabel": "Projection",
                 "fileFieldLabel": "File",
-                "fileFieldButtonText": "Browse"
+                "fileFieldButtonText": "Browse",
+                "templateStyleLabel": "Style from template"
             }
         }
     },
