--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -536,7 +536,8 @@
     "Koala.view.panel.Header": {
         "config": {
             "data": {
-                "logoTooltip": "Link to the BfS homepage"
+                "logoTooltip": "Link to the BfS homepage",
+                "headerTitle": "GEOPORTAL"
             }
         }
     },
