--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1717,7 +1717,8 @@
                 "refreshAutomatically": "Automatisch aktualisieren",
                 "refreshInterval": "Aktualisierungsintervall",
                 "minute": "1 Minute",
-                "minutes": "{0} Minuten"
+                "minutes": "{0} Minuten",
+                "numberfieldValidationText": "Wert muss ein Vielfaches von {0} sein!"
             }
         }
     },
