--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -346,7 +346,8 @@
                 "projectionLabel": "Projektion",
                 "fileFieldLabel": "Datei",
                 "fileFieldButtonText": "Durchsuchen",
-                "templateStyleLabel": "Stil aus Template"
+                "templateStyleLabel": "Stil aus Template",
+                "settingsText": "Einstellungen"
             }
         }
     },
@@ -1547,6 +1548,20 @@
                 "setFilterButtonText": "Anwenden",
                 "toggleUncertaintyLabel": "Messungenauigkeit umschalten",
                 "toggleGroupingLabel": "Gruppierung tauschen"
+            }
+        }
+    },
+    "Koala.view.form.ChartDataForm": {
+        "config": {
+            "data": {
+                "titleText": "Barchart Einstellungen",
+                "yAxisAttribute": "Attribut Y-Achse",
+                "yAxisScale": "Skalierung Y-Achse",
+                "groupAttribute": "Attribut Gruppierung",
+                "detectionLimitAttribute": "Attribut Nachweisgrenze",
+                "uncertaintyAttribute": "Attribut Unsicherheit",
+                "okButtonText": "Ok",
+                "cancelButtonText": "Abbrechen"
             }
         }
     },
