--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -345,7 +345,8 @@
                 "projectionLabel": "Projection",
                 "fileFieldLabel": "File",
                 "fileFieldButtonText": "Browse",
-                "templateStyleLabel": "Style from template"
+                "templateStyleLabel": "Style from template",
+                "settingsText": "Settings"
             }
         }
     },
@@ -1531,6 +1532,20 @@
                 "setFilterButtonText": "Apply",
                 "toggleUncertaintyLabel": "Toggle uncertainty",
                 "toggleGroupingLabel": "Toggle grouping"
+            }
+        }
+    },
+    "Koala.view.form.ChartDataForm": {
+        "config": {
+            "data": {
+                "titleText": "Bar chart settings",
+                "yAxisAttribute": "Y axis attribute",
+                "yAxisScale": "Y axis scale",
+                "groupAttribute": "Grouping attribute",
+                "detectionLimitAttribute": "Detection limit attribute",
+                "uncertaintyAttribute": "Uncertainty attribute",
+                "okButtonText": "Ok",
+                "cancelButtonText": "Cancel"
             }
         }
     },
