Move toggle uncertainty to chart menu

--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -527,6 +527,7 @@
                 "toggleScaleText": "linear/logarithmic",
                 "showIdentificationThresholdText": "Show data below < Id. Thresh.",
                 "toggleLegendText": "Toggle legend",
+                "toggleUncertaintyText": "Toggle uncertainty",
                 "axisText": "Axis",
                 "changeMinMaxText": "Change min/max",
                 "minMaxWindowTitle": "Change y axis",
