add option to FeatureGrid to add columns interactively

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -560,7 +560,9 @@
                 "multiEditTooltip": "Alle selektierten Zeilen ändern",
                 "deleteTitle": "Löschen",
                 "deleteMessage": "Wollen Sie die {0} selektierten Objekte löschen?",
-                "toggleSortSelectedText": "Selektierte nach oben"
+                "toggleSortSelectedText": "Selektierte nach oben",
+                "addColumnTooltip": "Spalte hinzufügen",
+                "columnPrefix": "Spalte_"
             }
         }
     },
