--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -558,7 +558,9 @@
                 "multiEditTooltip": "Update all selected rows",
                 "deleteTitle": "Delete",
                 "deleteMessage": "Do you want to delete the {0} selected objects?",
-                "toggleSortSelectedText": "Selected to top"
+                "toggleSortSelectedText": "Selected to top",
+                "addColumnTooltip": "Add column",
+                "columnPrefix": "column_"
             }
         }
     },
