Adds window to select parser on import style

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -226,6 +226,7 @@
                 "cancelButtonLabel": "Abbrechen",
                 "downloadStyleMsgTitle": "Style herunterladen",
                 "downloadFilenameText": "Dateiname",
+                "uploadStyleMsgTitle": "Style importieren",
                 "filenameNotValidText": "ungültiger Dateiname",
                 "outputFormatText": "Format",
                 "downloadStyleMsgButtonYes": "OK",
