initial commit for dokkpoolEvent handling

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -59,7 +59,9 @@
     },
     "Koala.util.String": {
         "statics": {
-            "defaultDateFormat": "d.m.Y H:i:s"
+            "defaultDateFormat": "d.m.Y H:i:s",
+            "bool2StringTrue": "JA",
+            "bool2StringFalse": "NEIN"
         }
     },
     "Koala.view.button.Permalink": {
@@ -572,7 +574,19 @@
         "config": {
             "data": {
                 "logoTooltip": "Link zur BfS-Homepage",
-                "headerTitle": "GEOPORTAL"
+                "headerTitle": "GEOPORTAL",
+                "alertBtnTooltip": "Ereignisinformation",
+                "routineMessageHeader": "Ereignis: <p style='font-size: 2em; margin: 0;'>[[id]]</p> (unverändert)",
+                "alertMessageHeader": "Ereignis: <p style='font-size: 2em; margin: 0;'>[[id]]</p> <div style='color:red; margin: 0;'> (modifiziert!)</div>",
+                "htmlMessageBody": "<div>" +
+                    "<b>geändert am:</b> [[modified]]<br>" +
+                    "<b>geändert von:</b> [[modified_by]]<br>" +
+                    "<b>Ist dies eine Übung?</b> [[Exercise]]<br>" +
+                    "<b>Ereigniszeit:</b> [[TimeOfEvent]]<br>" +
+                    "<b>Beschreibung:</b> [[description]]<br>" +
+                    "<b>Szenariophase:</b> [[ScenarioPhase.title]]<br>" +
+                    "<b>Ereignisort:</b> [[ScenarioLocation.title]]<br>" +
+                    "</div>"
             }
         }
     },
