--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -353,8 +353,8 @@
                 "projectionLabel": "Projektion",
                 "fileFieldLabel": "Datei",
                 "fileFieldButtonText": "Durchsuchen",
-                "templateStyleLabel": "Stil aus Template",
-                "settingsText": "Einstellungen"
+                "settingsText": "Einstellungen",
+                "selectStyle": "Stil wählen"
             }
         }
     },
@@ -757,6 +757,24 @@
         "config": {
             "data": {
                 "title": "Drucken"
+            }
+        }
+    },
+    "Koala.view.window.StyleSelectWindow": {
+        "config": {
+            "data": {
+                "title": "Stil auswählen",
+                "fileFieldTab": "Aus Datei",
+                "getFromEnvironmentFieldTab": "Aus Umweltbereich",
+                "templateTab": "Aus Template",
+                "geoStylerText": "GeoStyler-Default",
+                "fileFieldText": "SLD-Datei hochladen",
+                "selectEnvironmentFieldFieldText": "Feld mit Umweltbereich wählen",
+                "selectEnvironmentFieldText": "Umweltbereich wählen",
+                "selectTemplateText": "Template wählen",
+                "selectStyleText": "Stil wählen",
+                "applyText": "Übernehmen",
+                "cancelText": "Abbrechen"
             }
         }
     },
