Add template editor

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -541,7 +541,10 @@
                 "changeMinMaxText": "Min/Max ändern",
                 "minMaxWindowTitle": "y-Achse ändern",
                 "okText": "Ok",
-                "cancelText": "Abbrechen"
+                "cancelText": "Abbrechen",
+                "editTemplates": "Templates anpassen",
+                "title": "Titel",
+                "tooltip": "Tooltip"
             }
         }
     },
